--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-minify": "^0.5.1",
@@ -33,6 +34,8 @@
     "core-js": "^3.19.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.4.0",
+    "eslint": "^7.32.0",
+    "eslint-webpack-plugin": "^3.0.1",
     "mini-css-extract-plugin": "^2.4.5",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.9.1",
